--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/capturetheflag">
+
+
 
 
     <Button
@@ -17,7 +20,8 @@
         android:layout_marginRight="136dp"
         android:layout_marginStart="160dp"
         android:layout_marginTop="155dp"
-        android:text="Tracker"
+        android:alpha="0.5"
+        android:text="Track all Players"
         android:onClick="onTrackerButtonClicked"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +37,9 @@
         android:layout_marginLeft="160dp"
         android:layout_marginRight="136dp"
         android:layout_marginStart="160dp"
-        android:layout_marginTop="70dp"
-        android:text="Player"
+        android:layout_marginTop="390dp"
+        android:alpha="0.5"
+        android:text="I am Player"
         android:onClick="onPlayerButtonClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
